Version 0.9.3 [20 Nov 2015]
---------------------------
- Append the dialog after body so that pages with frameset element
  work too.
- Add warning when the editable input could not be found.


Version 0.9.2 [12 Aug 2015]
---------------------------
- Embed the suggestion dialog in an iframe, so that the CSS styles
  of the main page do not interfere with our styles.


Version 0.9.1 [07 Aug 2015]
---------------------------
- Localize the dialog too.
- Create plugin also for Firefox.
- Show the formatted HTML when editing contentEditable control.
- Various bug fixes.


Version 0.9.0 [20 Jul 2015]
---------------------------
- Initial public release to allow betatesting.