@@ -14,7 +14,7 @@
   "korektor_text_modified_error": { "message": "Obsah editačního prvku byl změněn, nahrazení nebude provedeno." },
   "korektor_dlg_ok": { "message": "OK" },
   "korektor_dlg_cancel": { "message": "Storno" },
-  "korektor_dlg_report_text": { "message": "Odeslat provedené opravy" },
+  "korektor_dlg_report_text": { "message": "Odeslat nám provedené změny" },
   "korektor_dlg_suggestions": { "message": "Návrhy" },
   "korektor_dlg_suggestions_original": { "message": "Původní" },
   "korektor_dlg_suggestions_custom": { "message": "Vlastní" }
