@@ -14,7 +14,7 @@
   "korektor_text_modified_error": { "message": "The text of the editable field has changed, not replacing it." },
   "korektor_dlg_ok": { "message": "OK" },
   "korektor_dlg_cancel": { "message": "Cancel" },
-  "korektor_dlg_report_text": { "message": "Report corrected text" },
+  "korektor_dlg_report_text": { "message": "Send us performed changes" },
   "korektor_dlg_suggestions": { "message": "Suggestions" },
   "korektor_dlg_suggestions_original": { "message": "Original" },
   "korektor_dlg_suggestions_custom": { "message": "Custom" }
